chapter 1, 2 almost ok

--- a/1_货币概述.md
+++ b/1_货币概述.md
@@ -34,18 +34,20 @@
 **金属货币**
 经过长年的自然淘汰，在绝大多数社会里，作为货币使用的物品逐渐被金属所取代。使用金属货币的好处是它的制造需要人工，无法从自然界大量获取，同时还易储存。数量稀少的金、银和冶炼困难的铜逐渐成为主要的货币金属。某些国家和地区使用过铁质货币。
 　　
+{width=100%,float=right}
+![中国古钱币](images/china_old_coins.jpg "中国古钱币")
+　　
 早期的金属货币是块状的，使用时需要先用试金石测试其成色，同时还要秤量重量。随着人类文明的发展，逐渐建立了更加复杂而先进的货币制度。古代希腊、罗马和波斯的人们铸造重量、成色统一的硬币。这样，在使用货币的时候，既不需要秤量重量，也不需要测试成色，无疑方便得多。这些硬币上面带有国王或皇帝的头像、复杂的纹章和印玺图案，以免伪造。
 
 中国最早的金属货币是商朝的铜贝。商代在我国历史上也称青铜器时代，当时相当发达的青铜冶炼业促进了生产的发展和交易活动的增加。于是，在当时最广泛流通的贝币由于来源的不稳定而使交易发生不便，人们便寻找更适宜的货币材料，自然而然集中到青铜上，青铜币应运而生。但这种用青铜制作的金属货币在制作上很粗糙，设计简单，形状不固定，没有使用单位，在市场上也未达到广泛使用的程度。由于其外形很像作为货币的贝币，因此人们大都将其称为铜贝。
-
-{width=100%,float=right}
-
-![中国古钱币](http://placehold.it/400x200 "中国古钱币")
 
 据考古材料分析，铜贝产生以后，是与贝币同时流通的，铜贝发展到春秋中期，又出现了新的货币形式，即包金铜贝，它是在普通铜币的外表包一层薄金，既华贵又耐磨。铜贝不仅是我国最早的金属货币，也是世界上最早的金属货币。
 
 **金银等贵金属**
 西方国家的主币为金币和银币，辅币以铜、铜合金制造。随着欧洲社会经济的发展，商品交易量逐渐增大，到15世纪时，经济发达的佛兰德斯和意大利北部各邦国出现了通货紧缩的恐慌。从16世纪开始，大量来自美洲的黄金和白银通过西班牙流入欧洲，挽救了欧洲的货币制度，并为其后欧洲的资本主义经济发展创造了起步的条件。
+
+{width=100%,float=right}
+![金钱币](images/gold.jpg "金钱币")
 
 **纸币**
 随着经济的进一步发展，金属货币同样显示出使用上的不便。在大额交易中需要使用大量的金属硬币，其重量和体积都令人感到烦恼。金属货币使用中还会出现磨损的问题，据不完全的统计，自从人类使用黄金作为货币以来，已经有超过两万吨的黄金在铸币厂里、或者在人们的手中、钱袋中和衣物口袋中磨损掉。于是作为金属货币的象征符号的纸币出现了。世界上最早的纸币在宋朝年间于中国四川地区出现的交子。最初的纸币是以黄金为基础的，与黄金可以自由兑换，两者可以同时流通，纸币的发行量也比较少。到19世纪末，资本主义经济出现了速度空前的膨胀与发展，于是纸币逐渐成为主要的流通货币，但是它们仍然有黄金作为发行的保障。这种货币制度称为“金本位”。
