--- a/2_不得不说的比特币.md
+++ b/2_不得不说的比特币.md
@@ -24,6 +24,16 @@
 
 2008年11月1日，一个自称中本聪的人在一个隐秘的密码学讨论组上贴出了一篇研究报告，报告阐述了他(她)对电子货币的新构想，比特币就此问世。2009年1月3日，中本聪开创了比特币P2P开源用户群节点和散列函数系统，从此，其对等网络和它的第一个区块链开始运行，他发行了有史以来的50个比特币。一年后，在比特币论坛上，用户群自发交易中，产生了第一个比特币公允汇率。该交易是一名用户发送10,000比特币，购买了一个披萨饼。随后比特币开始在全球快速发展。
 
+## 比特币是什么
+如前所述，比特币是一种用开源的P2P软件技术产生的电子货币，也是根据该开源软件以及建构其上的整个 P2P 网络的总称。
+
+与大多数现行货币不同的是，比特币货币系统是独立存在的，其运行不依赖于中央银行、政府、大型企业的支持或者信用担保。比特币使用遍布整个P2P网络节点的分布式数据库来管理货币的发行、交易和账户余额信息。比特币采用密码学的原理，确保各个比特币节点按照既定的协议达成共识，从而确保货币流通各个环节的安全性。例如，比特币只能被它的真实拥有者使用，而且仅仅能使用一次，支付完成之后原主人即失去对该份额比特币的所有权。
+
+{width=100%,float=right}
+![比特币](images/bitcoin.jpg "比特币")
+
+比特币货币总量按照设计预定的速率逐步增加，增加速度逐步放缓，并最终在 2140 年达到2100 万个的极限。P2P的分布式特性与去中心化的设计结构，确保了理论上任何机构都不可能操控比特币的货币总量，或者制造通货膨胀。在全球范围内，比特币可以通过多个线上的交易所和服务商进行兑换交易，也可以在线下找到兑换点，兑换为现钞或金币。
+
 > **中本聪身份之谜**
 
 > 当人们对比特币津津乐道时，比特党也在试图揭开中本聪的神秘身份。讨论组的老手们从未听说过中本聪这个人，有关他(她)的信息也寥寥无几，还都隐晦不明甚至自相矛盾。网上简介显示他(她)在日本居住，但他(她)的电子邮箱地址却是来自德国的一个免费服务站点，谷歌上也没有他(她)的任何信息，显然，“中本聪”是个假名。
@@ -36,7 +46,7 @@
 
 > 在此之后，就像他(她)的神秘出现一样，神龙见首不见尾的中本聪又消失了。格林威治时间2010年12月12日6点22分，就在他(她)发帖争辩给维基解密捐赠比特币7天后，中本聪在论坛发了最后一个帖子，帖中谈到软件最新版本几个无关紧要的细节，他(她)的电邮回复也变得更加不稳定，最后完全终止了。比特党对他(她)的离开感到悲伤和不解。但不管怎样，他(她)的发明已焕发出勃勃生机。
 
-## 比特币发展史
+## 比特币大事记
 2011年6月，在维基解密创始人阿桑奇和谷歌总裁Eric Schmidt秘密会晤时，阿桑奇向他介绍并解释了“无国度”的比特币。维基解密、自由网、 Singularity Institute、互联网档案馆、自由软件基金会以及其他的一些组织，开始接受比特币的捐赠。一些小型的企业也开始接受比特币，LaCie公司是一间上市公司，接受比特币作为其Wuala服务的付款方式。
 
 2012年10月，BitPay发布报告说，超过1000家商户通过他们的支付系统来接收比特币的付款。
@@ -61,7 +71,7 @@
 
 [^bitcoin_big_things]: 维基百科 比特币发展史
 
-比特币散发出无穷的魅力，甚至远在大洋彼岸的人也沉醉其中。
+比特币散发出无穷的魅力，这个诞生在互联网上的新生的事物，似乎天生就没有国界，迅速在世界范围热闹起来。
 
 ## 大洋对岸的比特币故事
 
@@ -82,76 +92,65 @@
 Q> ## 小思考
 Q> 为什么大洋西岸产生的一个新兴事物短期即能在大洋东岸催生一个千万富翁？
 
-目前，比特币最为主要的参考汇率是Mtgox交易所内比特币与美元的成交汇率。2013年11月，比特币的交易价格创下1242美元的历史新高，同期黄金价格为每盎司1241.98美元，比特币价格首次超过黄金。短短两年时间，比特币的价格涨了成千上万倍。它为什么有如此大的魅力，比特币到底是什么？
+目前，比特币最为主要的参考汇率是Mtgox交易所内比特币与美元的成交汇率。2013年11月，比特币的交易价格创下1242美元的历史新高，同期黄金价格为每盎司1241.98美元，比特币价格首次超过黄金。短短两年时间，比特币的价格涨了成千上万倍。它为什么有如此大的魅力？
 
-## 比特币是什么
-
-如前所述，比特币是一种用开源的P2P软件技术产生的电子货币，也是根据该开源软件以及建构其上的整个 P2P 网络的总称。
-
-与大多数现行货币不同的是，比特币货币系统是独立存在的，其运行不依赖于中央银行、政府、大型企业的支持或者信用担保。比特币使用遍布整个P2P网络节点的分布式数据库来管理货币的发行、交易和账户余额信息。比特币采用密码学的原理，确保各个比特币节点按照既定的协议达成共识，从而确保货币流通各个环节的安全性。例如，比特币只能被它的真实拥有者使用，而且仅仅能使用一次，支付完成之后原主人即失去对该份额比特币的所有权。
-
-比特币货币总量按照设计预定的速率逐步增加，增加速度逐步放缓，并最终在 2140 年达到2100 万个的极限。P2P的分布式特性与去中心化的设计结构，确保了理论上任何机构都不可能操控比特币的货币总量，或者制造通货膨胀。在全球范围内，比特币可以通过多个线上的交易所和服务商进行兑换交易，也可以在线下找到兑换点，兑换为现钞或金币。
-
+![比特币市值](images/bitcoin_market_value.jpg "比特币市值")
 
 ## 比特币原理
 
-中本聪在其论文中对比特币网络的原理有详细的描述。该论文论述严谨，涉及大量数学，密码学及计算机知识，质量很高，也让常人难以理解。 [^bitcoin_paper]
-
-然而理解是信任和使用的重要前提，有必要用浅显的语言对该论文做一个通俗易懂的解读。
+中本聪在其论文[^bitcoin_paper]中对比特币网络的原理有详细的描述。该论文论述严谨，涉及大量数学，密码学及计算机知识，质量很高，也让常人难以理解。理解有助于信任和使用，这里尝试用浅显的语言对该论文做一个通俗易懂的解读。
 
 [^bitcoin_paper]: 比特币论文 http://bitcoin.org/bitcoin.pdf
 
-首先，从比特币的本质说起，比特币的本质其实就是一堆复杂算法所生成的特解。
+我们可以把比特币理解为很复杂的方程组的有限个（约2100万）解，每一个解都能解开方程并且是唯一的。如果把它想象成人民币的序列号，每个比特币就相对于一张人民币。挖矿的过程就是通过庞大的计算量不断的去寻求这个方程组解的过程。由于这个方程组被设计成了只有2100万个解，所以比特币的上限就是 2100 万。
 
-[人话解读比特币]http://www.wumii.com/item/9wWjIC5A
-[知乎 中本聪]http://www.zhihu.com/question/22199390/answer/20615934
+那如何把钱花出去呢，编号为1的比特币的持有人都知道有这么一个比特币，那它不是可以永远使用它？
+答案是不行。比特币网络是一个在线系统，比特币本身作为一串数（方程组的解）离开了比特币网络一点用处也没有，这些数只有放进比特币网络里才能正常运作。
 
-特解是指方程组所能得到无限个（其实比特币是有限个）解中的一组。而每一个特解都能解开方程并且是唯一的。以人民币来比喻的话，比特币就是人民币的序列号，你知道了某张钞票上的序列号，你就拥有了这张钞票。
-而挖矿的过程就是通过庞大的计算量不断的去寻求这个方程组的特解，这个方程组被设计成了只有 2100 万个特解，所以比特币的上限就是 2100 万。
-到这里为止，比特币本质和挖矿的部分就解释完了，很扯对吧？凭什么我知道了钞票号码钱就是我的？那我把钱花出去了还记着号码不行么？
-不行。
-比特币网络是一个在线系统，比特币本身作为一串数（特解）离开了比特币网络一点用处也没有，这些数只有放进比特币网络里才能正常运作。换句话说，在这里将比特币比作下片的种子，将比特币网络比作下载用的网络，离开了下载工具，徒留你一大把种子也下不到泷泽萝拉不是么？
-比特币网络被设计成了一种分布式存储数据库，换句话说，就像你在银行存了钱，银行将这些钱拿出去借贷了但是你仍然能够在你的网银账户里看到钱数，其实就是银行在数据库里写下了你的账户金额。比特币也存在这么一个数据库，但是这个数据库并不存在某个中心的服务器里而是面向所有人公开：每一个比特币钱包都是一个节点，这些节点用类似于 BT 下载的 P2P 网络相连，现在比特币钱包安装后下载的数据大约为 7G，记录着全世界所有人比特币钱包里的数据。当然，如果以后发展比特币钱包继续增大也可以抛弃一些陈旧且无意义的交易细节。
-为什么要这么做？
-还记得比特币只是一串数吗？为什么能保证这串数在同一时刻只会拥有一个合法的主人呢？
-答案来了：每当你发起一次交易的时候，都会向整个比特币网发出广播，内容如下：
-“我是节点 A，有特解 123，现在要转账给节点（钱包）B，你们看好了昂？”
-比特币网络里的其他节点收到这个信息纷纷与自己的本地数据库进行比对，并回应：
-“我带入方程算了下，这确实是个解，而且我看到了 A 是有 123，B 节点也存在，我承认这笔交易。”
+比特币网络被设计成了一种分布式系统，我们可以把它想象为一个账本，它上面记满了各类明细。这个账本并不存在某个中心的服务器里而是面向所有人公开，每一个比特币钱包都是一个节点。这些节点用类似于 BT 下载的 P2P 网络相连。
+
+I> ## 小知识
+I> 比特币钱包记录着全世界所有人的数据,现在的数据大约为7G，如果以后钱包继续增大可以抛弃一些陈I> 旧且无意义的交易细节。
+
+怎么能保证比特币在同一时刻只会拥有一个合法的主人呢？答案来了，每当你发起一次交易的时候，都会向整个比特币网发出广播，内容如下：
+
+{lang="text"}
+ ~~~~~~~~ 
+“我是钱包 A，有编号为 123 的比特币，现在要转账给钱包B，请你们更新你们的账本”
+比特币网络里的其他钱包收到这个信息纷纷与自己的账本比对，并回应：
+“我带入方程算了下，编号为 123 的比特币存在。我看到了钱包 A 和 B 也存在，且该123号比特币确实为 A 所有，我承认这笔交易并将修改我的账本。”
+ ~~~~~~~~ 
+
 当确认的节点数达到一定量的时候（取决于收款方想要有多稳妥），交易就成功发生了。
-接下来，越来越多的节点收到了这个消息，并且没有人提出异议，这个交易记录就被整个比特币网络所接受，从此特解 123 成为了 B 钱包里的所有物。
+接下来，越来越多的节点收到了这个消息，并且没有人提出异议，这个交易记录就被整个比特币网络所接受，从此比特 123 成为了 B 钱包里的所有物。
+
 如果你在交易结束之后，欺骗本地客户端，又让 A 钱包发出信息：
-“我是节点 A，有特解 123，现在要转账给节点 C，你们看好了昂？”（即之前提到的记人民币号手法）。
+
+{lang="text"}
+ ~~~~~~~~ 
+“我是钱包 A，有比特币 123，现在要转账给钱包 C，请你们更新你们的账本”（和之前一样的过程）。
 其他节点收到信息与本地数据库一对比：
-“不对，我这写着特解 123 在 B 手里，不承认交易。”
+“不对，我这写着比特币 123 在 B 手里，不承认交易。”
+ ~~~~~~~~ 
+ 
 越来越多的节点拒绝了交易，于是你的交易就失败了。
-挖矿也是同样的原理，利用大量的计算力去计算方程组特解，而你的矿机程序会先与本地的数据库进行对比，发现自己这里从来没有这个特解，于是向全网广播：
+挖矿也是同样的原理，利用大量的计算力去计算方程组特解，而你的矿机程序会先与本地的账本进行对比，发现自己这里从来没有这个特解，于是向全网广播：
+
+{lang="text"}
+ ~~~~~~~~ 
 “我是 A，我这有个新比特币，叫 234，你们要没见过我可就收下了？”
-之后的原理与交易就相同了。
-比特币网络有一定的容错机制，可以保证即便是有一定的欺诈者（一直发发布虚假信息）和捣乱者（一直拒绝承认别人的交易）也不会影响到整个网络的运转。
-也因此，比特币虽然是匿名的但是也是完全透明的，只要你想的话，你可以在本地的数据库中追查到某个比特币从被发现之时起所有交易经过的节点。通过这些交易记录与那些各大比特币交易所的市场深度进行对比，其实要人肉某个账户相对来说也是比较容易的。
-有人又会问：既然比特币的算法是开源的，数据库是开放的，网络是无人控制的，那么难道不能以举国之力来“破解”比特币网络么？
-知乎上有这么一个问题：“如果用天河二号做比特币挖矿机效果如何？”
-简而言之就是比特币网络中现有的计算量已经非常庞大，即便是让国家级超级计算机加入比特币网络也不一定能获得优势，考虑到比特币的价格不稳定说不定还付不起超算的电费。而且在算法上，比特币保证了当整个网络的计算量提升的时候运算难度也会相应的提升，超算加入比特币网络大概也就只能领先一周左右。
-还有同样的来自开源的问题：如果比特币的算法是开源的，那么怎么能够保证它的上限只有 2100 万，为什么不能修改？
-谁告诉你不能修改的？当然可以修改
-比特币官方客户端源代码中这个文件的第 998 行附近：
-int64_t GetBlockValue(int nHeight, int64_t nFees)
-{
-    int64_t nSubsidy = 50 * COIN;
-
-    // Subsidy is cut in half every 210,000 blocks which will occur approximately every 4 years.
-    nSubsidy >>= (nHeight / Params().SubsidyHalvingInterval());
-
-    return nSubsidy + nFees;
-}
-只要修改那个 50 就可以增加比特币上限值，但是问题是比特币是开源的，标准是开放的，网络是没有中心管理的。“官方”客户端改了用户不一定愿意用，第三方客户端一看用户不愿意用人家也不跟进，所以某一家改了这个数字一点意义都没有。除非有足够大足够多的节点统一采用了新上限的客户端才会导致比特币网络的货币存量上限上升。
-所以，比特币的 2100 万上限不会增加并不是一个不能的问题，而是一个大家都不想于是达不成统一意见的问题（客观上确实就是增加不了）。
-针对商业上的逻辑就不好分析了，是不是旁氏骗局仁者见仁，不过比特币所浪费的计算力确实是货真价实的浪费，可不是像 SETI@Home 那样给什么研究机构做了贡献。不过因为比特币算法发明人中本聪身世扑朔迷离，发表了开头的那篇比特币初始算法和体系的论文之后就人间蒸发了，也说不定人家是某个神秘科学家正在利用大家的计算量和宇宙未知力量作战。
-不过，有一点到值得一提，现在中美都有金融界的相关学者提到了这样一个有趣的用途：比特币的这套系统和算法可以被用来代替现有的 SWIFT 国际资金清算系统，它的结算速度比现有的结算系统更快速，而且也十分安全可靠（这里是指算法可靠）。
-但是，即便真的比特币算法被当作一种新型的国际间结算标准使用，也不会使用现有的比特币网络来做。就像同样采用 BitTorrent 标准，国内的某些下载客户端可以保证只给自己的客户端供源而无视其他客户端一样。银行肯定会修改一定的算法作为一种银行业专用的私有系统进行结算，现有的比特币也肯定不会得到这个新私有网络的认可，所以和大众也没什么关系，这并不算是一个十足的利好消息。
+ ~~~~~~~~ 
+ 
+之后的原理与交易就相同了。你可能注意到，交易的成功需要有大多数节点接受才能成功，也就是说，只要系统中诚实的节点数量多余欺诈的节点数量，整个系统就是安全的。比特币网络的这种容错机制，可以保证即便是有一定的欺诈者（一直发布虚假信息）和捣乱者（一直拒绝承认别人的交易）也不会影响到整个网络的运转。
 
 ## 比特币的不足
+比特币是第一个被公众广泛接触和认可的电子货币，作为电子货币大军中的一员，起到排头兵的作用，现在也出尽了风头。但它也有一些不足。
+
+由于比特币的方便易用及没有监管，不少违法犯罪分子选择比特币作为脏款转移工具；随着比特币渐渐流行，越来越多的人投身到挖矿的行列中，很多计算资源和电力消耗在挖矿行为中。
+
+比特币的交易确认时间较长，一般需要10分钟，所以如果对时效性有较高要求，比特币不适用。
+
+比特币无法超发，作为一种货币为人们提供了很大的信心，但它无法解决和其它货币的协作问题。短时间内产生一种世界货币的可能性很小，多币种共存的现象将继续下去，所以货币对抗及货币兑换问题也依然存在。
 
 
 
